<resources>
    <string name="app_name">Budget Circle</string>

    <!-- Loading-->
    <string name="please_wait">Please, wait…</string>

    <!-- Fragments' titles -->
    <string name="budget_fragment">Budget</string>
    <string name="expenses_fragment">Expenses</string>
    <string name="earnings_fragment">Earnings</string>
    <string name="earning_types_fragment">Earning types</string>
    <string name="expense_types_fragment">Expense types</string>
    <string name="history_fragment">History</string>
    <string name="history_chart_fragment">History chart</string>
    <string name="settings_fragment">Settings</string>

    <!-- Text on fragments -->
    <string name="total">Total</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all_time">All time</string>
    <string name="no_entries">No entries</string>
    <string name="choosingPeriod">Period</string>
    <string name="show_repetitive_operations_switch">Show repetitive operations</string>
    <string name="added">Added</string>
    <string name="deleted">Deleted</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="more">More</string>
    <string name="stocks">Stocks</string>
    <string name="repOps">Repetitive operations</string>
    <string name="accList">Accounts list</string>
    <string name="earnList">All earnings</string>
    <string name="expList">All expenses</string>
    <string name="accept">Accept</string>

    <!-- Settings -->
    <string name="theme">theme</string>>

    <!-- History -->
    <string name="date">Date:</string>
    <string name="period">Period</string>
    <string name="type">Type</string>
    <string name="operations">Operations</string>
    <string name="exp_type">Expenses</string>
    <string name="earn_type">Earnings</string>
    <string name="exchange_type">Exchanges</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="budget_type">Budget type</string>
    <string name="start_with">Start with</string>
    <string name="start_with_new">New</string>
    <string name="start_with_old">Old</string>
    <string name="title_with_sum">%1$s (%2$s)</string>

    <!-- Forms -->
    <string name="new_expense">New expense</string>
    <string name="new_earning">New earning</string>
    <string name="new_account">New account</string>
    <string name="new_exchange">Exchange</string>
    <string name="account">Account</string>
    <string name="kind">Kind</string>
    <string name="is_repetitive">Repetitive</string>
    <string name="sum">Sum</string>
    <string name="op_date">Date</string>
    <string name="add_exp">Add expense</string>
    <string name="add_earn">Add earning</string>
    <string name="edit_account">Edit account</string>
    <string name="add_account">Add account</string>
    <string name="edit_earn">Edit earning</string>
    <string name="edit_exp">Edit expense</string>
    <string name="add_exchange">Exchange</string>
    <string name="comment">Commentary</string>
    <string name="acc_name">Account name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Title</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="email_format_string">String should have email format</string>
    <string name="zero_sum">Sum must be greater than 0</string>
    <string name="insufficient_funds">Insufficient funds on the account</string>
    <string name="is_scheduled">Repeat every month</string>

    <!-- Lists -->
    <string name="budgetTypes">Budget Types</string>

    <!-- Dialogs -->
    <string name="r_u_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>

    <!-- Auth -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Budget Circle / Login</string>
    <string name="login_short">Login</string>
    <string name="signup">Budget Circle / Sign up</string>
    <string name="signup_short">Sign up</string>
    <string name="wrongLoginOrPassword">Wrong Login or Password</string>
    <string name="token">token</string>
    <string name="login_save">login</string>

    <!-- User -->
    <string name="change_password">Change password</string>
    <string name="delete_all_operations">Delete all operations</string>
    <string name="clear_accounts">Clear accounts</string>
    <string name="log_out">Log out</string>
    <string name="user_account">User Account</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_changed">Password was changed</string>

    <!-- Operation Types-->
    <string name="add_earning_type">Add earning type</string>
    <string name="add_expense_type">Add expense type</string>
    <string name="edit_earning_type">Edit earning type</string>
    <string name="edit_expense_type">Edit expense type</string>
    <string name="other">Other</string>
    <string name="exchange">Exchange</string>

    <!-- Mode -->
    <string name="day_mode">day</string>
    <string name="night_mode">night</string>

    <!-- Settings -->
    <string name="url">url</string>
    <string name="settings">settings</string>
    <string name="mode">mode</string>
    <string name="offline">Offline mode</string>

    <!-- Planned Budget -->
    <string name="planned_budget_fragment">Planning</string>
    <string name="current">Current</string>
    <string name="planned">Planned</string>
    <string name="planned_earnings">Planned earnings</string>
    <string name="planned_expenses">Planned expenses</string>
    <string name="accounts">Accounts</string>
    <string name="make_plan">Plan</string>
</resources>