<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.ExpensesFormActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/new_expense"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/sum"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/expSum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expSum" />

    <EditText
        android:id="@+id/expSum"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red_switch_main"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/sum"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/red_switch_main"
        android:textColorLink="@color/red_switch_secondary"
        android:textCursorDrawable="@color/red_switch_main"
        android:textSize="20sp"
        android:theme="@style/redControlCursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/food"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/expSum"
        app:layout_constraintTop_toBottomOf="@+id/expSum" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="24.01.2021"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/kindTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/kind"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Switch
        android:id="@+id/expRepSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:theme="@style/RedSwitch"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/repTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/is_repetitive"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/expRepSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expRepSwitch" />

    <TextView
        android:id="@+id/expDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/op_date"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Button
        android:id="@+id/expAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red_button"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_exp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="@+id/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Title"
        app:srcCompat="@drawable/ic_back" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red_switch_main"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:textColorHighlight="@color/red_switch_main"
        android:textColorLink="@color/red_switch_secondary"
        android:textCursorDrawable="@color/red_switch_main"
        android:theme="@style/redControlCursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expRepSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>