<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.BudgetExchangeActivity">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/new_exchange"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/budgetSum"
        app:layout_constraintStart_toStartOf="@+id/titleFrom"
        app:layout_constraintTop_toTopOf="@+id/budgetSum" />


    <EditText
        android:id="@+id/budgetSum"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_switch_main"
        android:ems="10"
        android:hint="@string/sum"
        android:inputType="number|numberDecimal"
        android:textColorHighlight="@color/green_switch_main"
        android:textColorLink="@color/green_switch_secondary"
        android:textCursorDrawable="@color/green_switch_main"
        android:textSize="20sp"
        android:theme="@style/greenControlCursor"
        app:layout_constraintEnd_toEndOf="@+id/Title"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Button
        android:id="@+id/budgetExchangeAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_exchange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="@+id/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Title"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/listFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/budgetSum"
        app:layout_constraintTop_toBottomOf="@+id/budgetSum" />

    <TextView
        android:id="@+id/titleFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/from"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/listFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listFrom"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/listTo"
        app:layout_constraintStart_toStartOf="@+id/titleFrom"
        app:layout_constraintTop_toTopOf="@+id/listTo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/listTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/listFrom"
        app:layout_constraintTop_toBottomOf="@+id/listFrom" />
</androidx.constraintlayout.widget.ConstraintLayout>