<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.BudgetFormActivity">


    <TextView
        android:id="@+id/budgetFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/new_account"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/budgetAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="@+id/budgetFormTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/budgetFormTitle"
        app:srcCompat="@drawable/ic_back" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:theme="@style/greenEdgeEffect"
        app:layout_constraintBottom_toTopOf="@+id/budgetAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/budgetSum"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints="sum"
                    android:backgroundTint="@color/green_switch_main"
                    android:ems="10"
                    android:hint="@string/sum"
                    android:inputType="number|numberDecimal"
                    android:textColorHighlight="@color/green_switch_main"
                    android:textColorHint="@color/text_secondary"
                    android:textColorLink="@color/green_switch_secondary"
                    android:textCursorDrawable="@color/green_switch_main"
                    android:textSize="20sp"
                    android:theme="@style/greenControlCursor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/accName"
                    app:layout_constraintStart_toStartOf="@+id/accName"
                    app:layout_constraintTop_toBottomOf="@+id/accName" />

                <EditText
                    android:id="@+id/accName"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:autofillHints="accountName"
                    android:backgroundTint="@color/green_switch_main"
                    android:ems="10"
                    android:hint="@string/acc_name"
                    android:inputType="text"
                    android:textColorHighlight="@color/green_switch_main"
                    android:textColorHint="@color/text_secondary"
                    android:textColorLink="@color/green_switch_secondary"
                    android:textCursorDrawable="@color/green_switch_main"
                    android:textSize="20sp"
                    android:theme="@style/greenControlCursor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>